update locale for honolulu

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -22,19 +22,19 @@ en:
     required: "(required)"
   defaults:
     address: "address"
-    address_1: "1 City Hall Plaza"
-    address_2: "Suite 500"
-    city: "Boston"
-    city_state: "Boston, Massachusetts"
+    address_1: "530 South King St. Honolulu, HI"
+    address_2: ""
+    city: "Honolulu"
+    city_state: "Honolulu, Hawaii"
     neighborhood: "Downtown"
     sms_number: "857-555-1212"
-    state: "MA"
-    thing: "hydrant"
+    state: "HI"
+    thing: "siren"
     this_thing: "This %{thing}"
-    tagline: "Claim responsibility for shoveling out a fire hydrant after it snows."
+    tagline: "You agree to listen for the siren test and report any problems."
     tos: "By signing up, you agree to the %{tos}."
     voice_number: "617-555-1212"
-    zip: "02201-2013"
+    zip: "96813"
   errors:
     password: "You need to sign in or sign up before continuing."
     not_found: "Could not find %{thing}."
@@ -85,7 +85,7 @@ en:
   sponsors:
     built: "Built in Boston"
     cfa: "Code for America"
-    city: "City of Boston"
+    city: "City of Boston "
     mayor:
       name: "Thomas M. Menino"
       title: "Mayor"
