--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -24,17 +24,17 @@ es:
     address: "dirección"
     address_1: "1 City Hall Plaza"
     address_2: "Suite 500"
-    city: "Boston"
-    city_state: "Boston, Massachusetts"
+    city: "Honolulu"
+    city_state: "Honolulu, Hawaii"
     neighborhood: "Downtown"
     sms_number: "857-555-1212"
-    state: "MA"
+    state: "HI"
     thing: "boca de incendio"
     this_thing: "Esta %{thing}"
     tagline: "Reclamar la responsabilidad para palear un hidrante de incendios después de que las nieves."
     tos: "Al registrarse, usted está de acuerdo con los %{tos}."
     voice_number: "617-555-1212"
-    zip: "02201-2013"
+    zip: "96817"
   errors:
     password: "Es necesario iniciar sesión o registrarse antes de continuar."
     not_found: "No se pudo encontrar %{thing}."
