* Testing first push - Modified locales en.yml to display 808 phone number - Modified thing_mailer to say siren and honolulu.gov

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -10,7 +10,7 @@ en:
     edit_profile: "Edit profile"
     email_password: "Email me my password"
     find: "Find %{thing}"
-    send_reminder: "Send reminder to shovel"
+    send_reminder: "Send reminder to listen"
     sign_in: "Sign in"
     sign_out: "Sign out"
     sign_up: "Sign up"
@@ -27,13 +27,13 @@ en:
     city: "Honolulu"
     city_state: "Honolulu, Hawaii"
     neighborhood: "Downtown"
-    sms_number: "857-555-1212"
+    sms_number: "808-555-1212"
     state: "HI"
     thing: "siren"
     this_thing: "This %{thing}"
     tagline: "You agree to listen for the siren test and report any problems."
     tos: "By signing up, you agree to the %{tos}."
-    voice_number: "617-555-1212"
+    voice_number: "808-555-1212"
     zip: "96813"
   errors:
     password: "You need to sign in or sign up before continuing."
