add the city seal the sidebar

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -84,9 +84,8 @@ en:
     tos: "Terms of Service"
     thanks_for_feedback: "Thanks for the feedback"
   sponsors:
-    built: "Built in Boston"
     cfa: "Code for America"
-    city: "City of Boston "
+    city: "City and County of Honolulu"
     mayor:
-      name: "Thomas M. Menino"
+      name: "Peter Carlisle"
       title: "Mayor"
